{
    "name": "WCActions",
    "maps": [
        {
            "name": "Weapons",
            "id": "b8ee0a60-9f82-4689-b4cd-1d7858ac0a63",
            "actions": [
                {
                    "name": "RotateDirection",
                    "type": "Button",
                    "id": "a1e77fd7-bdc8-4bb3-9714-ca36611659b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "258d8288-e5aa-44e6-aeb8-5b3d05dc33a6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateDirection",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "7ca6b4ca-439e-4e6f-b99e-23971d3c3d06",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RotateDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "836fcc81-3896-4f73-a17a-9abf2bd9c782",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RotateDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}